Added all data set and some optimization for data

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        jdbc:
+          batch_size: 50
+        order_updates: true
     hibernate:
       ddl-auto: create-drop
     show-sql: true
@@ -18,3 +21,4 @@ spring:
 server:
   error:
     include-message: always
+
