Fixing problem with clustering, added new interpretation to clustered data and also added some new features for frontend part of application.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,10 +13,12 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
   datasource:
     username: ${db_username}
     url: ${db_url}
     password: ${db_password}
+
 
 server:
   error:
